--- a/configs/elmo_depth-1_seed-42.yaml
+++ b/configs/elmo_depth-1_seed-42.yaml
@@ -1,17 +1,12 @@
-# ELMo 모델 설정 (Depth 1)
-vocab_size: 30000
+vocab_size: 3,580,963     
 embedding_dim: 512
-hidden_dim: 512
-num_layers: 1  # depth: 1
+hidden_dim: 1024          # 논문 대비 1/4 축소 버전
+projection_dim: 256
 dropout: 0.1
-seq_len: 20  # 시퀀스 길이
+seq_len: 128
 batch_size: 32
 lr: 0.001
 epochs: 1
 seed: 42
-# Subsampling 설정
-enable_subsampling: true
-subsample_t: 1e-3
 num_workers: 16
-
-
+num_layers: 1
