--- a/configs/elmo_depth-1_seed-42.yaml
+++ b/configs/elmo_depth-1_seed-42.yaml
@@ -1,12 +1,12 @@
-vocab_size: 3,580,963     
-embedding_dim: 512
-hidden_dim: 1024          # 논문 대비 1/4 축소 버전
-projection_dim: 256
+vocab_size: 50000          # 메모리 절약을 위해 상위 50K 단어만 사용
+embedding_dim: 256         # 512 -> 256로 축소
+hidden_dim: 512           # 1024 -> 512로 축소
+projection_dim: 128       # 256 -> 128로 축소
 dropout: 0.1
-seq_len: 128
-batch_size: 32
+seq_len: 128              # GPU 활용률 향상을 위해 64 -> 128로 증가
+batch_size: 32            # GPU 활용률 향상을 위해 16 -> 32로 증가
 lr: 0.001
 epochs: 1
 seed: 42
-num_workers: 16
+num_workers: 6            # CPU 활용률 향상을 위해 4 -> 6으로 증가
 num_layers: 1
